--- a/src/components/sign_up/sign.css
+++ b/src/components/sign_up/sign.css
@@ -16,7 +16,7 @@ body {
   margin: 20px auto;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
   padding: 30px;
-  border: 2px solid #009efa;
+  box-shadow: 2px 2px 4px #757575;
   border-radius: 10px;
 }
 
@@ -24,7 +24,6 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 25px;
-  text-transform: uppercase;
   text-align: center;
 }
 
@@ -152,7 +151,7 @@ body {
   font-size: 15px;
   border: 0px;
   background: #009efa;
-  box-shadow: 0 4px rgba(0, 158, 250, 0.5);
+  box-shadow: 0 4px 3px rgba(0, 158, 250, 0.5);
   color: #fff;
   cursor: pointer;
   border-radius: 5px;
@@ -161,7 +160,7 @@ body {
 
 .wrapper .form .inputfield .btn:hover {
   background: rgba(0, 158, 250, 0.5);
-  box-shadow: 0 4px #009efa;
+  box-shadow: 0 4px 3px #009efa;
   transition: 0.1s;
 }
 .wrapper .form .inputfield .btn:active {
@@ -186,6 +185,7 @@ body {
 }
 .img-btn {
   padding: 10px;
+  width: 100%;
   border: 2px solid #007bff;
   border-radius: 5px;
   background-color: #f1f1f1;
@@ -193,18 +193,55 @@ body {
   cursor: pointer;
 }
 .switch {
-    padding: 10px 60px;
-    margin: 5px 18px 30px 18px;
-    border-radius: 5px;
-    border: 2px solid #007bff;
-    background: #007bff;
-    box-shadow: 0 4px #007bff6b;
+  padding: 10px 60px;
+  margin: 5px 18px 30px 18px;
+  border-radius: 5px;
+  border: 0px;
+  background: #007bff;
+  box-shadow: 0 4px 3px #007bff6b;
 }
-.switch:hover{
+.switch:hover {
   background: #007bff6b;
-  box-shadow: 0 4px #009efa;
+  box-shadow: 0 4px 3px #009efa;
   transition: 0.1s;
 }
-.switch:active{
+.switch:active {
   transform: translateY(4px);
+}
+.signin {
+  text-decoration: none;
+}
+
+.social {
+  padding: 10px 50px 10px 50px;
+  margin: 15px 30px 50px 10px;
+  border-radius: 5px;
+  border: 0px;
+  color: #009efa;
+  background: #ebf0fd;
+  box-shadow: 0 4px 3px #007bff6b;
+  font-size: large;
+  font-weight: 600;
+}
+.social:active{
+  transform: translateY(4px);
+  
+}
+.or{
+  text-align: center;
+  margin-top: 30px;
+  font-weight: 600;
+  color: #757575;
+}
+.fac:hover{
+  background: #007bff;
+  box-shadow: 0 4px 3px #bbbbbb;
+  transition: 0.1s;
+  color: #ebf0fd;
+}
+.goo:hover{
+  background-color: rgba(250, 5, 5, 0.747);
+  transition: 0.1s;
+  color: #ebf0fd;
+  box-shadow: 0 4px 3px #bbbbbb;
 }
