--- a/src/components/sign_up/sign.css
+++ b/src/components/sign_up/sign.css
@@ -44,8 +44,7 @@ body {
   font-size: 14px;
 }
 
-.wrapper .form .inputfield .input,
-.wrapper .form .inputfield .textarea {
+.wrapper .form .inputfield .input{
   width: 100%;
   outline: none;
   border: 1px solid #d5dbd9;
@@ -55,27 +54,24 @@ body {
   transition: all 0.3s ease;
 }
 
-.wrapper .form .inputfield .textarea {
-  width: 100%;
-  height: 125px;
-  resize: none;
-}
-
 .wrapper .form .inputfield .custom_select {
   position: relative;
   width: 100%;
   height: 37px;
 }
 
-.wrapper .form .inputfield .custom_select:before {
+.wrapper .form .inputfield .check .checkmark:before{
   content: "";
   position: absolute;
-  top: 12px;
-  right: 10px;
-  border: 8px solid;
-  border-color: #d5dbd9 transparent transparent transparent;
-  pointer-events: none;
-}
+  top: 1px;
+  left: 2px;
+  width: 5px;
+  height: 2px;
+  border: 2px solid;
+  border-color: transparent transparent #fff #fff;
+  transform: rotate(-45deg);
+  display: none;
+} 
 
 .wrapper .form .inputfield .custom_select select {
   -webkit-appearance: none;
@@ -91,8 +87,7 @@ body {
   border-radius: 5px;
 }
 
-.wrapper .form .inputfield .input:focus,
-.wrapper .form .inputfield .textarea:focus {
+.wrapper .form .inputfield .input:focus{
   border: 5px solid rgba(0, 158, 250, 0.5);
 }
 
@@ -120,7 +115,7 @@ body {
   display: block;
   position: relative;
 }
-/* .wrapper .form .inputfield .check .checkmark:before{
+.wrapper .form .inputfield .check .checkmark:before{
   content: "";
   position: absolute;
   top: 1px;
@@ -131,7 +126,7 @@ body {
   border-color: transparent transparent #fff #fff;
   transform: rotate(-45deg);
   display: none;
-} */
+}
 .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark {
   background: #009efa;
 }
