--- a/src/components/home_page/category/category/category.css
+++ b/src/components/home_page/category/category/category.css
@@ -1,11 +1,11 @@
-.gastroenterologyCategoryCard:hover {
+.CategoryCard:hover {
     background-color: #f0f0f0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
     transition: all 0.5s ease;
     cursor: pointer;
   }
 
-.gastroenterologyCategoryCard{
+.CategoryCard{
   transition: all 0.3s ease;
 }
   
