--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -151,3 +151,29 @@ body{
   margin-bottom: 20px;
 }
 }
+
+
+@media (max-width: 768px) {
+  .footerLogo{
+    display: none;
+  }
+
+  .footerDescription{
+    display: none;
+  }
+
+  .departmentFooter{
+    display: none;
+  }
+  .footerLinks{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .contactFooter{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
