--- a/src/components/sign_up/sign.css
+++ b/src/components/sign_up/sign.css
@@ -6,7 +6,13 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
-
+.signbody{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .wrapper {
   max-width: 500px;
   width: 100%;
