--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,7 +6,7 @@
    padding: 3rem 0;
    margin: 0 100px 0px 0px;
 }
-.container {
+.footer-container {
   max-width: 100%;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   margin: 0;
   padding: 0;
 }
-.row{
+.footer-row{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,23 +24,23 @@
   padding: 0;
 }
 
-.col{
+.footer-col{
   min-width: 250px;
   color:#f2f2f2f2;
   font-family: poppins;
   padding:0 2rem;
 }
-.col .logo{
+.footerLogo {
   width: 100px;
   margin-bottom:25px;
 }
-.col h3{
+.footer-col h3{
   color:#0a66c2;
   margin-bottom: 20px;
   position: relative;
   cursor: pointer;
 }
-.col h3::after{
+.footer-col h3::after{
   content: '';
   height:3px;
   width:0px;
@@ -51,10 +51,10 @@
   transition: 0.3s ease;
 
 }
-.col h3:hover::after{
+.footer-col h3:hover::after{
   width:30px
 }
-.col .media a i{
+.footer-col .media a i{
   margin-top:2rem;
   margin-right: 5px;
   transition: 0.3s ease;
@@ -62,7 +62,7 @@
   width: 30px;
   border-radius: 50%;
 }
-.col .media a i:hover{
+.footer-col .media a i:hover{
   transform: scale(1.5);
 }
 .fa-facebook {
@@ -81,7 +81,7 @@
 .fa-linkedin{
   color: #0a66c2;
 }
-.col .links a{
+.footer-col .links a{
   display: block;
   text-decoration: none;
   color:#f2f2f2;
@@ -89,7 +89,7 @@
   position: relative;
   transition: 0.3s ease;
 }
-.col .links a::before{
+.footer-col .links a::before{
   content:'';
   height: 16px;
   width:3px;
@@ -100,18 +100,18 @@
   transition: 0.5s ease;
   opacity: 0;
 }
-.col .links a:hover::before{
+.footer-col .links a:hover::before{
   opacity: 1;
 }
-.col .links a:hover{
+.footer-col .links a:hover{
   transform: translateX(-8px);
   color:#0a66c2;
 }
-.col .contact-details{
+.footer-col .contact-details{
   display: inline-flex;
   justify-content: space-between;
 }
-.col .contact-details i{
+.footer-col .contact-details i{
   margin-right:15px;
   display: inline-block;
 }
@@ -119,10 +119,10 @@
 /********** Responsive Design ********/
 @media(max-width:900px)
 {
-.row{
+.footer-row{
   flex-direction: column;
 }
-.col{
+.footer-col{
   width: 100%;
   text-align: left;
   margin-bottom: 25px;
@@ -130,10 +130,10 @@
 }
 @media(max-width:768px)
 {
-.row{
+.footer-row{
   flex-direction: column;
 }
-.col{
+.footer-col{
   width: 100%;
   text-align: left;
   margin-bottom: 20px;
