--- a/src/components/sign_up/sign.css
+++ b/src/components/sign_up/sign.css
@@ -18,14 +18,15 @@
   width: 100%;
   background: #fff;
   margin: 20px auto;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
   padding: 30px;
   box-shadow: 2px 2px 4px #757575;
   border-radius: 10px;
 }
-.push {
-  margin: 0 0 150px 0;
+.push{
+  position: relative;
+  bottom: -170px;
 }
+
 .forgot {
   margin-left: 130px;
   text-decoration: none;
