--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -140,6 +140,9 @@
   color: #2c3e50;
 }
 
+.welcomeUser:hover{
+  cursor: pointer;
+}
 @media (max-width: 768px) {
   .nav-menu {
     display: none;
@@ -202,4 +205,6 @@
   .welcomeUser{
     display: none;
   }
+ 
+
 }
