--- a/src/components/singleDoctorView/header/header.css
+++ b/src/components/singleDoctorView/header/header.css
@@ -5,9 +5,9 @@
 }
 
 .docPatImage {
-    max-width: 60%; 
-    height: auto; 
-    width: 100%; 
+    max-width: 100%; /* Allow image to take full width of its container */
+    height: auto; /* Maintain aspect ratio */
+    max-height: 400px; /* Set a maximum height */
 }
 
 .doctorNamePat {
