--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,8 +62,32 @@
   display: flex;
   align-items: center;
   transition: color 0.3s ease;
+  position: relative;
+  bottom: -8px;
 }
-
+.navnav{
+  color: rgb(27, 26, 26);
+  font-size: 18px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  transition: color 0.3s ease;
+  position: relative;
+  bottom: -8px;
+}
+#wel{
+  bottom: 8px;
+}
+.navpushing{
+  position: relative;
+  right: -38px;
+}
+.sinpushing{
+  right: -231px;
+}
+.sininpushing{
+  right: -305px;
+}
 .helloUser{
   color: black;
   font-size: 18px;
@@ -141,9 +165,6 @@
   color: #2c3e50;
 }
 
-.welcomeUser:hover{
-  cursor: pointer;
-}
 @media (max-width: 768px) {
   .nav-menu {
     display: none;
@@ -165,9 +186,9 @@
     transform: translateY(0);
   }
 
-  .nav-item {
-    margin: 20px 0;
-  }
+    .nav-item {
+      margin: 20px 0;
+    }
 
   .menu-icon {
     display: block;
